Revert "Robert/317 cancellation auto enroll (#156)" (#171)
This reverts commit 464ef591bfd053d08a43db3acd77aa93065d2f2f.