@@ -19,14 +19,6 @@ package uk.ac.cam.cl.dtg.isaac.api;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.ENDDATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.EVENT_TYPE;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CANNOT_LOCATE_USER;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT;
-import static uk.ac.cam.cl.dtg.isaac.api.Constants.EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR;
 import static uk.ac.cam.cl.dtg.isaac.api.Constants.PRIVATE_EVENT_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ADMIN_BOOKING_REASON_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.ATTENDED_FIELDNAME;
@@ -37,13 +29,11 @@ import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_DATE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EVENT_TAGS_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.EventFilterOption;
-import static uk.ac.cam.cl.dtg.segue.api.Constants.ID_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.NEVER_CACHE_WITHOUT_ETAG_CHECK;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.STAGE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SegueServerLogType;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.SortOrder;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TAGS_FIELDNAME;
-import static uk.ac.cam.cl.dtg.segue.api.Constants.TITLE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.TYPE_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_FKEY_FIELDNAME;
 import static uk.ac.cam.cl.dtg.segue.api.Constants.USER_ID_LIST_FKEY_FIELDNAME;
@@ -240,14 +230,14 @@ public class EventsFacade extends AbstractIsaacFacade {
     }
 
     final Map<String, Constants.SortOrder> sortInstructions = Maps.newHashMap();
-    if (sortOrder != null && sortOrder.equals(TITLE_FIELDNAME)) {
-      sortInstructions.put(TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
+    if (sortOrder != null && sortOrder.equals("title")) {
+      sortInstructions.put(Constants.TITLE_FIELDNAME + "." + Constants.UNPROCESSED_SEARCH_FIELD_SUFFIX,
           SortOrder.ASC);
     } else {
       sortInstructions.put(DATE_FIELDNAME, SortOrder.DESC);
     }
 
-    fieldsToMatch.put(TYPE_FIELDNAME, List.of(EVENT_TYPE));
+    fieldsToMatch.put(TYPE_FIELDNAME, Arrays.asList(EVENT_TYPE));
 
     Map<String, AbstractFilterInstruction> filterInstructions = null;
     if (null != showActiveOnly && showActiveOnly) {
@@ -314,8 +304,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(findByFieldNames).build();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (SegueDatabaseException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error accessing your bookings.")
@@ -350,7 +340,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       if (tags != null) {
         Set<String> tagsList = Sets.newHashSet(tags);
         tagsList.retainAll(eventDTOById.getTags()); // get intersection
-        if (tagsList.isEmpty()) {
+        if (tagsList.size() == 0) {
           // if the intersection is empty then we can continue
           continue;
         }
@@ -409,11 +399,11 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The event specified does not exist.").toResponse();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (SegueDatabaseException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
+      log.error("Error during event request", e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error resolving event bookings.")
           .toResponse();
     }
@@ -441,7 +431,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -475,7 +465,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (ResourceNotFoundException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "The booking you requested does not exist.").toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+      String errorMsg = "Database error occurred while trying to retrieve all event booking information.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     }
@@ -521,7 +511,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve event booking information.")
           .toResponse();
     } catch (EventIsFullException e) {
       return new SegueErrorResponse(Status.CONFLICT,
@@ -536,7 +526,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The user doesn't exist, so unable to book them onto an event", e)
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
+      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
     }
   }
 
@@ -564,7 +554,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       List<DetailedEventBookingDTO> eventBookings = bookingManager.adminGetBookingsByEventId(eventId);
 
-      if (Role.EVENT_LEADER.equals(currentUser.getRole())) {
+      if (Arrays.asList(Role.EVENT_LEADER).contains(currentUser.getRole())) {
         eventBookings = userAssociationManager.filterUnassociatedRecords(currentUser, eventBookings,
             booking -> booking.getUserBooked().getId());
       }
@@ -574,7 +564,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException | ContentManagerException e) {
-      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+      String message = "Database error occurred while trying to retrieve all event booking information.";
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     }
@@ -798,12 +788,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String message = EXCEPTION_MESSAGE_DATABASE_ERROR_RETRIEVING_BOOKING;
+      String message = "Database error occurred while trying to retrieve all event booking information.";
       log.error(message, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, message).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve event booking information.")
           .toResponse();
     } catch (UnableToIndexSchoolsException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Database error while looking up schools", e)
@@ -861,21 +851,21 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
+      String errorMsg = "Database error occurred while trying to book a user onto an event.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
       return new SegueErrorResponse(Status.NOT_FOUND, "Unable to locate the user requested").toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve all event booking information.")
           .toResponse();
     } catch (DuplicateBookingException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
           "User already booked on this event. Unable to create a duplicate booking.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
+      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
     }
   }
 
@@ -967,7 +957,7 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserException e) {
       return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate one of the users specified.");
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
+      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
     }
   }
 
@@ -1038,15 +1028,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
+      String errorMsg = "Database error occurred while trying to delete an event booking.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
+      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
     }
   }
 
@@ -1102,12 +1092,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
+      String errorMsg = "Database error occurred while trying to book a user onto an event.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve all event booking information.")
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1127,7 +1117,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           "The booking deadline for this event has passed. No more bookings are being accepted.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
+      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
     }
   }
 
@@ -1160,12 +1150,12 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_CREATING_BOOKING;
+      String errorMsg = "Database error occurred while trying to book a user onto an event.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve all event booking information.")
           .toResponse();
     } catch (EmailMustBeVerifiedException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1186,7 +1176,7 @@ public class EventsFacade extends AbstractIsaacFacade {
               + " Please use the request booking endpoint to book you on to it.")
           .toResponse();
     } catch (EventIsCancelledException e) {
-      return SegueErrorResponse.getBadRequestResponse(EXCEPTION_MESSAGE_CANNOT_BOOK_CANCELLED_EVENT);
+      return SegueErrorResponse.getBadRequestResponse("The event is cancelled, so no bookings are being accepted.");
     }
   }
 
@@ -1242,9 +1232,11 @@ public class EventsFacade extends AbstractIsaacFacade {
       }
 
       // if the user id is null then it means they are changing their own booking.
-      if (userId != null && (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
-          || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event)))) {
-        return SegueErrorResponse.getIncorrectRoleResponse();
+      if (userId != null) {
+        if (!(bookingManager.isUserAbleToManageEvent(userLoggedIn, event)
+            || bookingManager.isReservationMadeByRequestingUser(userLoggedIn, userOwningBooking, event))) {
+          return SegueErrorResponse.getIncorrectRoleResponse();
+        }
       }
 
       Set<BookingStatus> cancelableStatuses =
@@ -1268,15 +1260,15 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
+      String errorMsg = "Database error occurred while trying to delete an event booking.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
+      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
     }
   }
 
@@ -1307,7 +1299,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       this.bookingManager.resendEventEmail(event, bookedUser);
 
-      log.info("User ({}) has just resent an event email to user id ({})", currentUser.getEmail(), bookedUser.getId());
+      log.info(String.format("User (%s) has just resent an event email to user id (%s)",
+          currentUser.getEmail(), bookedUser.getId()));
 
       return Response.noContent().build();
     } catch (NoUserLoggedInException e) {
@@ -1317,11 +1310,11 @@ public class EventsFacade extends AbstractIsaacFacade {
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
+      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
     } catch (EventIsCancelledException e) {
       return SegueErrorResponse.getBadRequestResponse("Event is cancelled, cannot resent event emails.");
     }
@@ -1370,14 +1363,14 @@ public class EventsFacade extends AbstractIsaacFacade {
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
-      String errorMsg = EXCEPTION_MESSAGE_DATABASE_ERROR_DELETING_BOOKING;
+      String errorMsg = "Database error occurred while trying to delete an event booking.";
       log.error(errorMsg, e);
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (NoUserException e) {
-      return SegueErrorResponse.getResourceNotFoundResponse(EXCEPTION_MESSAGE_CANNOT_LOCATE_USER);
+      return SegueErrorResponse.getResourceNotFoundResponse("Unable to locate user specified.");
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     }
   }
@@ -1435,7 +1428,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, errorMsg).toResponse();
     } catch (ContentManagerException e) {
       return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR,
-          EXCEPTION_MESSAGE_CONTENT_ERROR_RETRIEVING_BOOKING)
+          "Content Database error occurred while trying to retrieve event booking information.")
           .toResponse();
     } catch (EventBookingUpdateException e) {
       return new SegueErrorResponse(Status.BAD_REQUEST,
@@ -1528,10 +1521,10 @@ public class EventsFacade extends AbstractIsaacFacade {
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put(ID_FIELDNAME, event.getId());
-        eventOverviewBuilder.put(TITLE_FIELDNAME, event.getTitle());
+        eventOverviewBuilder.put("id", event.getId());
+        eventOverviewBuilder.put("title", event.getTitle());
         eventOverviewBuilder.put("subtitle", event.getSubtitle());
-        eventOverviewBuilder.put(DATE_FIELDNAME, event.getDate());
+        eventOverviewBuilder.put("date", event.getDate());
         eventOverviewBuilder.put("bookingDeadline",
             event.getBookingDeadline() == null ? event.getDate() : event.getBookingDeadline());
         eventOverviewBuilder.put("eventStatus", event.getEventStatus());
@@ -1566,8 +1559,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
@@ -1665,9 +1658,9 @@ public class EventsFacade extends AbstractIsaacFacade {
         }
 
         ImmutableMap.Builder<String, Object> eventOverviewBuilder = new ImmutableMap.Builder<>();
-        eventOverviewBuilder.put(ID_FIELDNAME, e.getId());
-        eventOverviewBuilder.put(TITLE_FIELDNAME, e.getTitle());
-        eventOverviewBuilder.put(DATE_FIELDNAME, e.getDate());
+        eventOverviewBuilder.put("id", e.getId());
+        eventOverviewBuilder.put("title", e.getTitle());
+        eventOverviewBuilder.put("date", e.getDate());
         eventOverviewBuilder.put("subtitle", e.getSubtitle());
         if (e.getEventStatus() != null) {
           eventOverviewBuilder.put("status", e.getEventStatus());
@@ -1686,8 +1679,8 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       return Response.ok(new ResultsWrapper<>(resultList, findByFieldNames.getTotalResults())).build();
     } catch (ContentManagerException e) {
-      log.error(EXCEPTION_MESSAGE_EVENT_REQUEST_ERROR, e);
-      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, EXCEPTION_MESSAGE_ERROR_LOCATING_CONTENT)
+      log.error("Error during event request", e);
+      return new SegueErrorResponse(Status.INTERNAL_SERVER_ERROR, "Error locating the content you requested.")
           .toResponse();
     }
   }
